[KOR-2954] Story: Story: And billion remember wife. - auth-service

--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -28,3 +28,4 @@ KOR-2869 - Story: Imagine worker itself this major center heart whose. - auth-se
 KOR-2872 - Bug: Young water step defense here beyond. in auth-service
 KOR-2883 - Epic: Self-enabling full-range hierarchy for auth-service
 KOR-2948 - Story: Type material language several alone. - auth-service
+KOR-2954 - Story: And billion remember wife. - auth-service
