--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -41,3 +41,4 @@ KOR-2947 - Task: Of add on morning forward which step room. - shipping-service
 KOR-2950 - Story: Your morning building show. - shipping-service
 KOR-2952 - Task: Itself look house stand whose mouth. - shipping-service
 KOR-2965 - Story: Nation during car so probably. - shipping-service
+KOR-2989 - Bug: Report ability effort debate adult red. in shipping-service
