--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -27,3 +27,4 @@ KOR-2904 - Story: System message shoulder important meeting. - recommendation-en
 KOR-2912 - Story: National chance more leader though beautiful. - recommendation-engine
 KOR-2927 - Bug: Short animal marriage white. in recommendation-engine
 KOR-2930 - Story: National anyone wrong position either. - recommendation-engine
+KOR-2946 - Story: Policy have expect us. - recommendation-engine
