--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -31,3 +31,4 @@ KOR-2913 - Story: Surface first difficult especially. - frontend-web
 KOR-2939 - Story: Close affect establish major particularly. - frontend-web
 KOR-2973 - Bug: Speech western difficult appear star outside. in frontend-web
 KOR-2979 - Task: Watch wonder couple manager cut fine meet. - frontend-web
+KOR-2987 - Story: Single somebody able nice. - frontend-web
