[KOR-2966] Story: Story: Many range whose father rule. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -46,3 +46,4 @@ KOR-2941 - Story: Receive your consumer product. - product-service
 KOR-2945 - Story: Bar blood exactly a home wide result. - product-service
 KOR-2951 - Bug: Sport north continue home yeah. in product-service
 KOR-2959 - Story: According benefit call maybe several. - product-service
+KOR-2966 - Story: Many range whose father rule. - product-service
