[KOR-2902] Story: Story: Cause western toward. - order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -24,3 +24,4 @@ KOR-2821 - Story: Away hear even hope good seem join. - order-service
 KOR-2827 - Task: Election glass thing new huge. - order-service
 KOR-2846 - Bug: Country prove large learn rich probably beyond commercial. in order-service
 KOR-2870 - Task: Mean claim billion power. - order-service
+KOR-2902 - Story: Cause western toward. - order-service
