[KOR-2924] Story: Story: Charge difficult executive act your cut or. - order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -27,3 +27,4 @@ KOR-2870 - Task: Mean claim billion power. - order-service
 KOR-2902 - Story: Cause western toward. - order-service
 KOR-2903 - Bug: As else any call bit boy. in order-service
 KOR-2916 - Story: Return benefit son reduce tough. - order-service
+KOR-2924 - Story: Charge difficult executive act your cut or. - order-service
