--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -27,3 +27,4 @@ KOR-2849 - Story: Matter building ten station war. - notification-service
 KOR-2850 - Task: Life answer resource share yeah politics hear. - notification-service
 KOR-2882 - Bug: Here forget road several Democrat short glass. in notification-service
 KOR-2898 - Story: Could group play per perform expect culture. - notification-service
+KOR-2901 - Story: Always range star page sister ability. - notification-service
