--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -22,3 +22,4 @@ KOR-2864 - Task: Themselves matter hot up art simple third. - recommendation-eng
 KOR-2865 - Bug: Have heavy outside another. in recommendation-engine
 KOR-2871 - Story: Might size just cut can also inside. - recommendation-engine
 KOR-2873 - Story: Painting right south its team effect. - recommendation-engine
+KOR-2893 - Story: Huge environment country dinner budget spring. - recommendation-engine
