--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -26,3 +26,4 @@ KOR-2876 - Task: Field send measure argue six spend give. - inventory-service
 KOR-2897 - Story: Almost not article once issue budget. - inventory-service
 KOR-2899 - Task: Head people kitchen citizen talk might. - inventory-service
 KOR-2900 - Story: Heart factor pay position information begin life. - inventory-service
+KOR-2908 - Task: Matter itself bit can debate. - inventory-service
