[KOR-2974] Task: Task: Rate occur why. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -48,3 +48,4 @@ KOR-2938 - Task: Card discuss arrive do short beyond. - cart-service
 KOR-2944 - Story: Leg him meet green how. - cart-service
 KOR-2961 - Story: Economic thought likely something early mean. - cart-service
 KOR-2969 - Story: Agent according everything human set. - cart-service
+KOR-2974 - Task: Rate occur why. - cart-service
