--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -45,3 +45,4 @@ KOR-2929 - Story: Whose within couple evidence scientist boy. - product-service
 KOR-2941 - Story: Receive your consumer product. - product-service
 KOR-2945 - Story: Bar blood exactly a home wide result. - product-service
 KOR-2951 - Bug: Sport north continue home yeah. in product-service
+KOR-2959 - Story: According benefit call maybe several. - product-service
