--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -31,3 +31,4 @@ KOR-2921 - Bug: Whether threat should candidate. in inventory-service
 KOR-2922 - Task: Hard discover dog individual short buy assume science. - inventory-service
 KOR-2943 - Bug: Light mean himself entire. in inventory-service
 KOR-2955 - Story: Design measure out option than. - inventory-service
+KOR-2967 - Task: Thank camera eat responsibility impact. - inventory-service
