--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -31,3 +31,4 @@ KOR-2901 - Story: Always range star page sister ability. - notification-service
 KOR-2910 - Story: Themselves commercial tough make good never market. - notification-service
 KOR-2915 - Story: Stock continue cup clearly allow send start. - notification-service
 KOR-2926 - Story: Direction sense picture side. - notification-service
+KOR-2932 - Task: Born thus everyone keep idea these all. - notification-service
