--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -39,3 +39,4 @@ KOR-2878 - Story: Majority firm whether. - product-service
 KOR-2881 - Story: Note green choice play forward subject. - product-service
 KOR-2886 - Story: Level imagine short dream laugh head technology. - product-service
 KOR-2890 - Story: Lawyer benefit instead role line continue. - product-service
+KOR-2914 - Story: Lawyer or reveal worker side house. - product-service
