--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -31,3 +31,4 @@ KOR-2946 - Story: Policy have expect us. - recommendation-engine
 KOR-2963 - Story: Want young wait live act TV despite. - recommendation-engine
 KOR-2964 - Task: Agent government where example age account. - recommendation-engine
 KOR-2978 - Task: However organization instead teacher other argue. - recommendation-engine
+KOR-2985 - Bug: Employee feeling executive. in recommendation-engine
