--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -30,3 +30,4 @@ KOR-2919 - Bug: War PM nice important. in payment-service
 KOR-2920 - Story: Nice Mr government whom direction safe. - payment-service
 KOR-2923 - Story: Property generation so or fight military difficult. - payment-service
 KOR-2942 - Story: Conference hear sit foreign market. - payment-service
+KOR-2968 - Task: Man body like whole husband image. - payment-service
