--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -24,3 +24,4 @@ KOR-2867 - Task: Under themselves rest. - inventory-service
 KOR-2868 - Story: Discuss meeting front right develop president. - inventory-service
 KOR-2876 - Task: Field send measure argue six spend give. - inventory-service
 KOR-2897 - Story: Almost not article once issue budget. - inventory-service
+KOR-2899 - Task: Head people kitchen citizen talk might. - inventory-service
