--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -48,3 +48,4 @@ KOR-2951 - Bug: Sport north continue home yeah. in product-service
 KOR-2959 - Story: According benefit call maybe several. - product-service
 KOR-2966 - Story: Many range whose father rule. - product-service
 KOR-2972 - Bug: Attention daughter issue or newspaper. in product-service
+KOR-2976 - Task: Stage worker anything their activity staff. - product-service
