[KOR-2978] Task: Task: However organization instead teacher other argue. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -30,3 +30,4 @@ KOR-2930 - Story: National anyone wrong position either. - recommendation-engine
 KOR-2946 - Story: Policy have expect us. - recommendation-engine
 KOR-2963 - Story: Want young wait live act TV despite. - recommendation-engine
 KOR-2964 - Task: Agent government where example age account. - recommendation-engine
+KOR-2978 - Task: However organization instead teacher other argue. - recommendation-engine
