--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -26,3 +26,4 @@ KOR-2846 - Bug: Country prove large learn rich probably beyond commercial. in or
 KOR-2870 - Task: Mean claim billion power. - order-service
 KOR-2902 - Story: Cause western toward. - order-service
 KOR-2903 - Bug: As else any call bit boy. in order-service
+KOR-2916 - Story: Return benefit son reduce tough. - order-service
