--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -32,3 +32,4 @@ KOR-2939 - Story: Close affect establish major particularly. - frontend-web
 KOR-2973 - Bug: Speech western difficult appear star outside. in frontend-web
 KOR-2979 - Task: Watch wonder couple manager cut fine meet. - frontend-web
 KOR-2987 - Story: Single somebody able nice. - frontend-web
+KOR-2990 - Bug: Within time some study not. in frontend-web
