--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -51,3 +51,4 @@ KOR-2969 - Story: Agent according everything human set. - cart-service
 KOR-2974 - Task: Rate occur why. - cart-service
 KOR-2975 - Story: Consumer job pretty purpose buy strong. - cart-service
 KOR-2982 - Epic: Future-proofed demand-driven Graphical User Interface for cart-service
+KOR-2986 - Task: Lay environmental opportunity foreign song court stay. - cart-service
