--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -29,3 +29,4 @@ KOR-2894 - Story: Television difficult white. - frontend-web
 KOR-2906 - Task: Summer off hot view number. - frontend-web
 KOR-2913 - Story: Surface first difficult especially. - frontend-web
 KOR-2939 - Story: Close affect establish major particularly. - frontend-web
+KOR-2973 - Bug: Speech western difficult appear star outside. in frontend-web
