--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -27,3 +27,4 @@ KOR-2862 - Bug: Move civil best environmental hard. in auth-service
 KOR-2869 - Story: Imagine worker itself this major center heart whose. - auth-service
 KOR-2872 - Bug: Young water step defense here beyond. in auth-service
 KOR-2883 - Epic: Self-enabling full-range hierarchy for auth-service
+KOR-2948 - Story: Type material language several alone. - auth-service
