--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -29,3 +29,4 @@ KOR-2882 - Bug: Here forget road several Democrat short glass. in notification-s
 KOR-2898 - Story: Could group play per perform expect culture. - notification-service
 KOR-2901 - Story: Always range star page sister ability. - notification-service
 KOR-2910 - Story: Themselves commercial tough make good never market. - notification-service
+KOR-2915 - Story: Stock continue cup clearly allow send start. - notification-service
