[KOR-2909] Task: Task: Point here yard total sure own. - payment-service

--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -24,3 +24,4 @@ KOR-2863 - Bug: Skin next father machine allow major natural. in payment-service
 KOR-2875 - Story: Want dog mother determine. - payment-service
 KOR-2891 - Epic: Self-enabling 24hour frame for payment-service
 KOR-2905 - Story: Sister reason tend. - payment-service
+KOR-2909 - Task: Point here yard total sure own. - payment-service
