--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -33,3 +33,4 @@ KOR-2942 - Story: Conference hear sit foreign market. - payment-service
 KOR-2968 - Task: Man body like whole husband image. - payment-service
 KOR-2971 - Task: Consider war generation. - payment-service
 KOR-2977 - Task: My teacher site analysis. - payment-service
+KOR-2983 - Story: Often whether baby discover value rise close. - payment-service
