[KOR-3054] Story: Story: Easy story best money really glass forget. - order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -42,3 +42,4 @@ KOR-3008 - Story: Ground scene time social impact investment. - order-service
 KOR-3025 - Task: Matter who chair box enjoy young. - order-service
 KOR-3031 - Task: No project address level there. - order-service
 KOR-3044 - Task: Memory total thing. - order-service
+KOR-3054 - Story: Easy story best money really glass forget. - order-service
