--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -40,3 +40,4 @@ KOR-2998 - Story: Somebody few series we. - order-service
 KOR-3000 - Task: Wear method data base including pretty. - order-service
 KOR-3008 - Story: Ground scene time social impact investment. - order-service
 KOR-3025 - Task: Matter who chair box enjoy young. - order-service
+KOR-3031 - Task: No project address level there. - order-service
