--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -36,3 +36,4 @@ KOR-2977 - Task: My teacher site analysis. - payment-service
 KOR-2983 - Story: Often whether baby discover value rise close. - payment-service
 KOR-3003 - Story: Even doctor others customer into. - payment-service
 KOR-3027 - Story: Environment police young once ready. - payment-service
+KOR-3036 - Story: City possible scene necessary performance public. - payment-service
