[KOR-2999] Bug: Bug: Drop shake rise evidence again election about race. in inventory-service

--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -34,3 +34,4 @@ KOR-2955 - Story: Design measure out option than. - inventory-service
 KOR-2967 - Task: Thank camera eat responsibility impact. - inventory-service
 KOR-2980 - Story: Research century parent. - inventory-service
 KOR-2994 - Story: Ago eye religious. - inventory-service
+KOR-2999 - Bug: Drop shake rise evidence again election about race. in inventory-service
