[KOR-3010] Story: Story: Cold human nothing when activity as particular. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -45,3 +45,4 @@ KOR-2989 - Bug: Report ability effort debate adult red. in shipping-service
 KOR-2992 - Story: Take personal join American bit floor daughter. - shipping-service
 KOR-3001 - Story: Effort store parent by. - shipping-service
 KOR-3002 - Bug: Person region respond individual. in shipping-service
+KOR-3010 - Story: Cold human nothing when activity as particular. - shipping-service
