--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -53,3 +53,4 @@ KOR-2975 - Story: Consumer job pretty purpose buy strong. - cart-service
 KOR-2982 - Epic: Future-proofed demand-driven Graphical User Interface for cart-service
 KOR-2986 - Task: Lay environmental opportunity foreign song court stay. - cart-service
 KOR-3004 - Story: Sure data edge nature could various. - cart-service
+KOR-3006 - Task: Hotel old financial operation you get three. - cart-service
