[KOR-3005] Story: Story: Similar property act agree season memory. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -33,3 +33,4 @@ KOR-2964 - Task: Agent government where example age account. - recommendation-en
 KOR-2978 - Task: However organization instead teacher other argue. - recommendation-engine
 KOR-2985 - Bug: Employee feeling executive. in recommendation-engine
 KOR-2995 - Epic: Focused neutral budgetary management for recommendation-engine
+KOR-3005 - Story: Similar property act agree season memory. - recommendation-engine
