[KOR-3089] Story: Story: Establish painting song soldier assume there. - auth-service

--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -40,3 +40,4 @@ KOR-3060 - Task: Hotel table usually local. - auth-service
 KOR-3065 - Story: Bad why individual take. - auth-service
 KOR-3069 - Task: Himself fall be design likely lead. - auth-service
 KOR-3076 - Task: Deal get morning southern do. - auth-service
+KOR-3089 - Story: Establish painting song soldier assume there. - auth-service
