[KOR-3042] Story: Story: Available pattern arrive war. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -36,3 +36,4 @@ KOR-2995 - Epic: Focused neutral budgetary management for recommendation-engine
 KOR-3005 - Story: Similar property act agree season memory. - recommendation-engine
 KOR-3016 - Story: Box worry significant decide. - recommendation-engine
 KOR-3040 - Task: Thousand daughter once line. - recommendation-engine
+KOR-3042 - Story: Available pattern arrive war. - recommendation-engine
