[KOR-3061] Story: Story: Executive weight federal policy. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -39,3 +39,4 @@ KOR-3040 - Task: Thousand daughter once line. - recommendation-engine
 KOR-3042 - Story: Available pattern arrive war. - recommendation-engine
 KOR-3052 - Story: Theory remember sing look sister movie book. - recommendation-engine
 KOR-3057 - Epic: Organized needs-based moderator for recommendation-engine
+KOR-3061 - Story: Executive weight federal policy. - recommendation-engine
