--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -40,3 +40,4 @@ KOR-3036 - Story: City possible scene necessary performance public. - payment-se
 KOR-3047 - Story: Ability old single southern writer. - payment-service
 KOR-3050 - Story: Chance unit anyone kid school stage. - payment-service
 KOR-3067 - Task: Art nature most behind market. - payment-service
+KOR-3068 - Task: Risk record reason society. - payment-service
