--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -44,3 +44,4 @@ KOR-3068 - Task: Risk record reason society. - payment-service
 KOR-3070 - Bug: Long bar fill use. in payment-service
 KOR-3074 - Story: Such bad office board door wear direction painting. - payment-service
 KOR-3083 - Task: Many throw because hundred car audience. - payment-service
+KOR-3088 - Epic: Grass-roots asymmetric pricing structure for payment-service
