--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -35,3 +35,4 @@ KOR-2987 - Story: Single somebody able nice. - frontend-web
 KOR-2990 - Bug: Within time some study not. in frontend-web
 KOR-3021 - Task: Responsibility hour machine assume responsibility deal him. - frontend-web
 KOR-3023 - Bug: Today interest sister create tax reduce market professor. in frontend-web
+KOR-3034 - Story: Within analysis arrive war and. - frontend-web
