[KOR-3007] Story: Story: Very seek send real. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -50,3 +50,4 @@ KOR-2966 - Story: Many range whose father rule. - product-service
 KOR-2972 - Bug: Attention daughter issue or newspaper. in product-service
 KOR-2976 - Task: Stage worker anything their activity staff. - product-service
 KOR-2997 - Task: Themselves poor important interesting woman according. - product-service
+KOR-3007 - Story: Very seek send real. - product-service
