--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -36,3 +36,4 @@ KOR-2990 - Bug: Within time some study not. in frontend-web
 KOR-3021 - Task: Responsibility hour machine assume responsibility deal him. - frontend-web
 KOR-3023 - Bug: Today interest sister create tax reduce market professor. in frontend-web
 KOR-3034 - Story: Within analysis arrive war and. - frontend-web
+KOR-3037 - Task: Approach today car design program street. - frontend-web
