--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -40,3 +40,4 @@ KOR-2981 - Bug: Ready rock scientist read doctor also listen consumer. in notifi
 KOR-2984 - Story: Ask build yes. - notification-service
 KOR-3013 - Story: Support tonight view life myself cold. - notification-service
 KOR-3018 - Task: Help standard between how foot. - notification-service
+KOR-3024 - Story: The glass reason guy method woman popular control. - notification-service
