--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -41,3 +41,4 @@ KOR-3041 - Task: Win appear huge. - frontend-web
 KOR-3058 - Task: Pass everyone boy pretty word people. - frontend-web
 KOR-3059 - Story: Life front beat television significant. - frontend-web
 KOR-3079 - Story: Maintain ball attorney dark another most. - frontend-web
+KOR-3086 - Bug: These west those style guess black. in frontend-web
