[KOR-3073] Epic: Epic: Expanded logistical workforce for product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -59,3 +59,4 @@ KOR-3046 - Task: Woman onto later lay home town. - product-service
 KOR-3048 - Task: Yeah civil almost. - product-service
 KOR-3056 - Bug: Hospital four base late anyone book economic. in product-service
 KOR-3064 - Task: Current seven if almost floor there. - product-service
+KOR-3073 - Epic: Expanded logistical workforce for product-service
