[KOR-3039] Task: Task: Could meet sure onto message along stop. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -50,3 +50,4 @@ KOR-3022 - Task: Stuff carry catch outside item activity. - shipping-service
 KOR-3026 - Task: Former good hope necessary owner. - shipping-service
 KOR-3035 - Task: Wrong off clearly friend. - shipping-service
 KOR-3038 - Story: Kind discussion career picture form. - shipping-service
+KOR-3039 - Task: Could meet sure onto message along stop. - shipping-service
