--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -34,3 +34,4 @@ KOR-2978 - Task: However organization instead teacher other argue. - recommendat
 KOR-2985 - Bug: Employee feeling executive. in recommendation-engine
 KOR-2995 - Epic: Focused neutral budgetary management for recommendation-engine
 KOR-3005 - Story: Similar property act agree season memory. - recommendation-engine
+KOR-3016 - Story: Box worry significant decide. - recommendation-engine
