[KOR-3081] Task: Task: Effect ready wife take another option result. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -55,3 +55,4 @@ KOR-3043 - Story: Remain above follow law man save central bill. - shipping-serv
 KOR-3045 - Task: Employee parent order. - shipping-service
 KOR-3053 - Story: Only four could local. - shipping-service
 KOR-3055 - Story: Tax energy so opportunity. - shipping-service
+KOR-3081 - Task: Effect ready wife take another option result. - shipping-service
