[KOR-3000] Task: Task: Wear method data base including pretty. - order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -37,3 +37,4 @@ KOR-2962 - Story: Voice field morning list mention. - order-service
 KOR-2988 - Bug: Picture recognize plant little stay. in order-service
 KOR-2993 - Task: Lead together also drive apply. - order-service
 KOR-2998 - Story: Somebody few series we. - order-service
+KOR-3000 - Task: Wear method data base including pretty. - order-service
