--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -36,3 +36,4 @@ KOR-2958 - Story: Down yard artist develop week contain. - order-service
 KOR-2962 - Story: Voice field morning list mention. - order-service
 KOR-2988 - Bug: Picture recognize plant little stay. in order-service
 KOR-2993 - Task: Lead together also drive apply. - order-service
+KOR-2998 - Story: Somebody few series we. - order-service
