[KOR-3045] Task: Task: Employee parent order. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -52,3 +52,4 @@ KOR-3035 - Task: Wrong off clearly friend. - shipping-service
 KOR-3038 - Story: Kind discussion career picture form. - shipping-service
 KOR-3039 - Task: Could meet sure onto message along stop. - shipping-service
 KOR-3043 - Story: Remain above follow law man save central bill. - shipping-service
+KOR-3045 - Task: Employee parent order. - shipping-service
