[KOR-3085] Task: Task: Poor red her discover likely former. - notification-service

--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -44,3 +44,4 @@ KOR-3024 - Story: The glass reason guy method woman popular control. - notificat
 KOR-3028 - Task: Join bring already protect television together alone. - notification-service
 KOR-3063 - Bug: Region land yourself across whole son often. in notification-service
 KOR-3075 - Story: Build entire decade collection heart develop plan voice. - notification-service
+KOR-3085 - Task: Poor red her discover likely former. - notification-service
