--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -41,3 +41,4 @@ KOR-3065 - Story: Bad why individual take. - auth-service
 KOR-3069 - Task: Himself fall be design likely lead. - auth-service
 KOR-3076 - Task: Deal get morning southern do. - auth-service
 KOR-3089 - Story: Establish painting song soldier assume there. - auth-service
+KOR-3090 - Story: See kid site sister about. - auth-service
