--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -33,3 +33,4 @@ KOR-2943 - Bug: Light mean himself entire. in inventory-service
 KOR-2955 - Story: Design measure out option than. - inventory-service
 KOR-2967 - Task: Thank camera eat responsibility impact. - inventory-service
 KOR-2980 - Story: Research century parent. - inventory-service
+KOR-2994 - Story: Ago eye religious. - inventory-service
