--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -57,3 +57,4 @@ KOR-3030 - Story: Ago dinner couple never herself section trade pick. - product-
 KOR-3033 - Story: Where spring black other street education them. - product-service
 KOR-3046 - Task: Woman onto later lay home town. - product-service
 KOR-3048 - Task: Yeah civil almost. - product-service
+KOR-3056 - Bug: Hospital four base late anyone book economic. in product-service
