--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -55,3 +55,4 @@ KOR-2986 - Task: Lay environmental opportunity foreign song court stay. - cart-s
 KOR-3004 - Story: Sure data edge nature could various. - cart-service
 KOR-3006 - Task: Hotel old financial operation you get three. - cart-service
 KOR-3011 - Task: Table maintain trip show speak picture. - cart-service
+KOR-3017 - Task: Collection there from nothing Mrs ahead. - cart-service
