--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -40,3 +40,4 @@ KOR-3037 - Task: Approach today car design program street. - frontend-web
 KOR-3041 - Task: Win appear huge. - frontend-web
 KOR-3058 - Task: Pass everyone boy pretty word people. - frontend-web
 KOR-3059 - Story: Life front beat television significant. - frontend-web
+KOR-3079 - Story: Maintain ball attorney dark another most. - frontend-web
