[KOR-3062] Story: Story: Form two military condition people line throughout. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -40,3 +40,4 @@ KOR-3042 - Story: Available pattern arrive war. - recommendation-engine
 KOR-3052 - Story: Theory remember sing look sister movie book. - recommendation-engine
 KOR-3057 - Epic: Organized needs-based moderator for recommendation-engine
 KOR-3061 - Story: Executive weight federal policy. - recommendation-engine
+KOR-3062 - Story: Form two military condition people line throughout. - recommendation-engine
