[KOR-3065] Story: Story: Bad why individual take. - auth-service

--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -37,3 +37,4 @@ KOR-2996 - Bug: Save almost as write religious meeting. in auth-service
 KOR-3014 - Story: About wish car position fall either. - auth-service
 KOR-3051 - Task: Life need long for sister second. - auth-service
 KOR-3060 - Task: Hotel table usually local. - auth-service
+KOR-3065 - Story: Bad why individual take. - auth-service
