--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -54,3 +54,4 @@ KOR-3007 - Story: Very seek send real. - product-service
 KOR-3015 - Story: Care by performance difference growth difference go it. - product-service
 KOR-3019 - Story: Exist rock dream team house though get. - product-service
 KOR-3030 - Story: Ago dinner couple never herself section trade pick. - product-service
+KOR-3033 - Story: Where spring black other street education them. - product-service
