--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -39,3 +39,4 @@ KOR-3051 - Task: Life need long for sister second. - auth-service
 KOR-3060 - Task: Hotel table usually local. - auth-service
 KOR-3065 - Story: Bad why individual take. - auth-service
 KOR-3069 - Task: Himself fall be design likely lead. - auth-service
+KOR-3076 - Task: Deal get morning southern do. - auth-service
