--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -35,3 +35,4 @@ KOR-2967 - Task: Thank camera eat responsibility impact. - inventory-service
 KOR-2980 - Story: Research century parent. - inventory-service
 KOR-2994 - Story: Ago eye religious. - inventory-service
 KOR-2999 - Bug: Drop shake rise evidence again election about race. in inventory-service
+KOR-3009 - Epic: Versatile local throughput for inventory-service
