--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -56,3 +56,4 @@ KOR-3019 - Story: Exist rock dream team house though get. - product-service
 KOR-3030 - Story: Ago dinner couple never herself section trade pick. - product-service
 KOR-3033 - Story: Where spring black other street education them. - product-service
 KOR-3046 - Task: Woman onto later lay home town. - product-service
+KOR-3048 - Task: Yeah civil almost. - product-service
